--- a/u-life_react/src/components/styles/pages/PageStyle.css
+++ b/u-life_react/src/components/styles/pages/PageStyle.css
@@ -5,7 +5,7 @@
 }
 
 .page-container {
-  padding: 36px 50px;
+  padding: 80px;
 }
 
 .page-title-row {
